syntax = "proto3";
package librevault.meta.v2;

message Chunk {
  bytes ciphertext_hash = 1;
  uint32 size = 2;
  bytes iv = 3;
}

message DataStream {
  repeated bytes chunk_ids = 1;
}

enum ObjectKind {
  TOMBSTONE = 0;
  FILE = 1;
  DIRECTORY = 2;
  SYMLINK = 3;
}

message ObjectMeta {
  ObjectKind kind = 1;
  bytes normalized_path = 2;
  // Represents data streams for file. Maps to ADS on Win, xattr on Linux, Mac. Empty stream name is the main stream (file contents)
  map<string, DataStream> data_streams = 3;
  bytes symlink_target = 4;

  /* Times */
//  int64 mtime = 4;  // Win: lpLastWriteTime
//  int64 atime = 5;  // Win: lpLastAccessTime
//  int64 ctime = 6;  // Win: -nothing-
//  int64 crtime = 7;  // Win: lpCreationTime
  // Unix-specific
//  uint32 mode = 8;
//  uint32 uid = 9;
//  uint32 gid = 10;
  // Windows-specific
//  uint32 windows_attrib = 11;  // Win: dwFileAttributes
}

message EncryptedObjectMeta {
  bytes id = 1;
  bytes encrypted_meta = 2;
}

// This structure represents a changeset, that is used to represent a state transition between one or more parent ChangeSets.
message ChangeSet {
  bytes id = 1;
  repeated bytes parent = 2;

  repeated EncryptedObjectMeta include_meta = 3;
  repeated bytes exclude_meta = 4;
  repeated Chunk include_chunks = 5;
  repeated bytes exclude_chunks = 6;
}

message SignedChangeSet {
  bytes changeset = 1;
  bytes signature = 2;
}
